--- a/styles/reset.css
+++ b/styles/reset.css
@@ -8,6 +8,12 @@
   across all modern devices and browsers.
 */
 
+*, *::before, *::after {
+
+  box-sizing: border-box;
+
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -43,6 +49,7 @@ body {
   line-height: 1.5;
   background-color: #000;
   color: #fff;
+  font-family: 'Raleway', 'Roboto', sans-serif;
 
 }
 
